plugins {
    id 'application'
}

evaluationDependsOn(':')

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

dependencies {
    implementation project(':')
    compileOnly 'io.netty:netty-buffer:4.1.100.Final'
}

def sampleMainClasses = [
    runRequestReplyAsync: 'systems.zlink.samples.RequestReplyAsyncSample',
    runPairRecv: 'systems.zlink.samples.PairRecvSample',
    runPubSubRecv: 'systems.zlink.samples.PubSubRecvSample',
    runDealerRouterRecv: 'systems.zlink.samples.DealerRouterRecvSample',
    runStreamRecv: 'systems.zlink.samples.StreamRecvSample',
    runStreamPacketCallback: 'systems.zlink.samples.StreamPacketCallbackSample',
    runMonitorRecv: 'systems.zlink.samples.MonitorRecvSample',
    runSpotRecv: 'systems.zlink.samples.SpotRecvSample',
    runSpotRequestAsync: 'systems.zlink.samples.SpotRequestAsyncSample',
    runActorRoomServer: 'systems.zlink.samples.ActorRoomServerSample',
    runActorGatewayRelay: 'systems.zlink.samples.ActorGatewayRelaySample',
    runActorSinglePlayerQueue: 'systems.zlink.samples.ActorSinglePlayerQueueSample',
    runActorQueueExample: 'systems.zlink.samples.ActorQueueExample',
    runActorRoomExample: 'systems.zlink.samples.ActorRoomExample',
    runActorSequentialExample: 'systems.zlink.samples.ActorSequentialExample',
    runSpotPubSubExample: 'systems.zlink.samples.SpotPubSubExample',
    runSpotRpcExample: 'systems.zlink.samples.SpotRpcExample',
    runSpotTimerExample: 'systems.zlink.samples.SpotTimerExample'
]

def sampleRunTasks = sampleMainClasses.collect { taskName, mainClassName ->
    tasks.register(taskName, JavaExec) {
        group = 'application'
        classpath =
          sourceSets.main.runtimeClasspath + project(':').sourceSets.main.runtimeClasspath
        mainClass = mainClassName
        jvmArgs '--enable-native-access=ALL-UNNAMED'
    }
}

sampleRunTasks.eachWithIndex { sampleTask, index ->
    if (index > 0) {
        sampleTask.configure {
            mustRunAfter sampleRunTasks[index - 1]
        }
    }
}

tasks.register('runAllSamples') {
    group = 'application'
    dependsOn sampleRunTasks
}
